# CppJson

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  License.md  README.md  Todo.md
cmake/: MSUnitTestFrameworkConfig.cmake
include/: CppJson.h
include/CppJson/: JsonArray.h  JsonBase.h  JsonFuncs.h  JsonObject.h  ObjectValueType.h
sources/: JsonArray.cpp  JsonFuncs.cpp  JsonObject.cpp  ObjectValueType.cpp
sources/Support/: JsonParser.cpp  JsonParser.h
sources/support/: JsonParser.cpp  JsonParser.h
tests/: CMakeLists.txt  main.cpp
tests/TestJsonArray/: ut_ArrayBaseAddGetProperties.cpp  ut_ArraySimpleCreateJson.cpp
tests/TestJsonObject/: ut_AdditionalAddGetProperties.cpp  ut_BaseAddGetProperties.cpp  ut_FieldAcess.cpp  ut_ObjectCreateWithSubs.cpp  ut_SimpleCreateJson.cpp
tests/TestObjectValueType/: ut_AddJsonObject.cpp  ut_AdvancedGetMethods.cpp  ut_BaseTests.cpp  ut_EqualOperatorsTests.cpp
tests/TestParser/: ut_ParserAdvanced.cpp  ut_ParserSimple.cpp  ut_ParserWorkCases.cpp
tests/TestParser/_Trash/: ut_ParserSubFunctions.cpp
tests/Utils/: ValideMethods.cpp  ValideMethods.h
